src/mqtt/snapshots/hik_sink__mqtt__manager__test__camera_alert_regions_restored-2.snap
---
source: src/mqtt/manager.rs
expression: messages

---
- topic: hikvision_cameras/device_cam1/ch1/Motion
  qos: AtLeastOnce
  retain: true
  payload:
    Json:
      alerting: false
      regions: []

