src/mqtt/snapshots/hik_sink__mqtt__manager__test__camera_alert_regions_restored.snap
---
source: src/mqtt/manager.rs
expression: manager

---
cameras:
  - config:
      generated_id: cam1
      name: Camera 1
      address: 192.168.20.2
      port: ~
      username: admin
      password: password
    info:
      device_name: Cam 1
      device_id: 7ccc4404-e05d-4376-8ebf-81127da67c11
      model: DS-2DE4A425IW-DE
      serial_number: DS-2DE4A425IW-DE20180101AAWRC52000000W
      mac_address: "ff:ff:ff:ff:ff:ff"
      firmware_version: V5.5.71
      firmware_release_date: build 180725
      device_type: IPDome
    triggers:
      - trigger:
          identifier:
            channel: "1"
            event_type: Motion
          hik_id: Motion-1
          description: ""
        alerting: false
        regions: []
        last_alert: "[last_alert]"
    connected: true
    log: Connected
topics:
  base: hikvision_cameras
  home_assistant: homeassistant

