src/mqtt/snapshots/hik_sink__mqtt__manager__test__initial_state.snap
---
source: src/mqtt/manager.rs
expression: manager

---
cameras:
  - config:
      generated_id: cam1
      name: Camera 1
      address: 192.168.20.2
      port: ~
      username: admin
      password: password
    info: ~
    triggers: []
    connected: false
    log: Initial connection in progress...
topics:
  base: hikvision_cameras
  home_assistant: homeassistant

