src/mqtt/snapshots/hik_sink__mqtt__manager__test__lwt.snap
---
source: src/mqtt/manager.rs
expression: manager.mqtt_lwt()

---
topic: hikvision_cameras/availability
qos: AtLeastOnce
retain: true
payload:
  Constant: offline

